--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,9 +73,9 @@ body {
   background-image: linear-gradient(
     -225deg,
     #ff99ff 0%,
-    rgb(99 102 241) 30%,
-    #6600ff 50%,
-    rgb(99 102 241) 70%,
+    #66a3ff 25%,
+    #8533ff 50%,
+    #66a3ff 75%,
     #ff99ff 100%
   );
   background-size: auto auto;
