--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,18 @@
   }
 }
 
+@keyframes blinkAnim {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 @keyframes borderAnimation{
   from{
     rotate: 0deg;
@@ -24,6 +36,10 @@
   to{
     rotate: 0deg;
   }
+}
+
+.blink {
+  animation: blinkAnim 1.5s infinite linear;
 }
 
 .animate-box{
